[tool.poetry]
name = "hello-world"
version = "0.1.2"
description = "Hello, World!"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.942"
pytest = "^7.1.1"
uvicorn = "^0.17.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
